# codigos-de-artigos

./: .gitignore  404.html  README-EN.md  README.md  index.html  search.html
.github/workflows/: codeql.yml  dependency-review.yml  main.yml
Construindo uma API organizadinha em Golang usando Fiber/: index.html
Criando uma API de páginas estáticas básica com Deno 🦕/: index.html
Docker Compose - MariaDB/: index.html
Documentação Automática usando MkDocs e Python/: index.html
Usando DDD com FastAPI e subaplicações/: index.html
deno/fugindo_do_any/: 01_tipos_implicitos_explicitos.ts  02_tuplas.ts  03_interfaces_types_record_literal.ts  04_caso_real.ts  makefile
deno/site_server_side/: README.md  makefile  package-lock.json
docker/docker-compose-mariadb/: README-EN.md  README.md
docker/docker-compose-postgresql/: README-EN.md  README.md
docker/docker-compose-server-ftp/: README-EN.md  README.md
documentacao/: .gitignore  Makefile  mkdocs.yml  pyproject.toml
documentacao/.github/workflows/: main.yml
documentacao/code/: hook_load_files.py  macros.py
documentacao/docs/: - Iniciar projeto poetry.md  Construindo uma API organizadinha em Golang usando Fiber.md  Criando uma API de páginas estáticas básica com Deno 🦕.md  Documentação Automática usando MkDocs e Python.md  Usando DDD com FastAPI e subaplicações.md
documentacao/docs/css/: style.css
documentacao/hooks/: load_files.py
documentacao/site/: 404.html  index.html
documentacao/site/Construindo uma API organizadinha em Golang usando Fiber/: index.html
documentacao/site/Criando uma API de páginas estáticas básica com Deno 🦕/: index.html
documentacao/site/Documentação Automática usando MkDocs e Python/: index.html
documentacao/site/search/: search_index.json
english/: index.html
english/Docker Compose - FTP Server/: index.html
english/Docker Compose - MariaDB/: index.html
english/How to Install Applications Using Snap/: index.html
english/Spinning Up PostgreSQL with Docker Compose + Dashboard/: index.html
general/como_instalar_pacotes_snap/: README-EN.md  README.md
golang/api_simples/: README.md  go.mod  go.sum  main.go
multi_language/bun e node/: Makefile  README.md  bun_bench.txt  bun_bench.txt~  node_bench.txt
node/fugindo_do_any/: 02_tuplas.ts  03_interfaces_types_record_literal.ts  04_generics.ts  05_typing_legacy_functions.ts  06_last_tips.ts  07_last_tips.ts  (+6 more)
português/: index.html
python/start-em-um-projeto-python/: .prospector.yaml  Makefile  db.json  pyproject.toml  ruff.toml
python/start-em-um-projeto-python/src/: main.py
python/start-em-um-projeto-python/src/configs/: database.py  dependency_injection.py
python/start-em-um-projeto-python/src/handlers/: note_handler.py
python/start-em-um-projeto-python/src/models/: note_model.py
python/start-em-um-projeto-python/src/repositories/: base_repository.py  note_repository.py
python/start-em-um-projeto-python/src/routers/: note_router.py
python/start-em-um-projeto-python/src/routers/schemas/: note_schema.py
search/: search_index.json
(+54 files in other folders)
