[tool.poetry]
name = "documentacao"
version = "0.1.0"
description = ""
authors = ["XandeCoding <af.santos1998@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
mkdocs = "^1.4.3"
mkdocs-material = "^9.1.14"
mkdocs-macros-plugin = "^0.7.0"
mkdocs-dracula-theme = "^1.0.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
