[tool.poetry]
name = "documentacao"
version = "0.1.0"
description = ""
authors = ["XandeCoding <af.santos1998@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
mkdocs = "^1.6.1"
mkdocs-macros-plugin = "^1.3.7"
mkdocs-dracula-theme = "^1.0.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
