[tool.poetry]
name = "documentacao"
version = "0.1.0"
description = ""
authors = ["XandeCoding <af.santos1998@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
mkdocs = {extras = ["i18n"], version = "^1.6.1"}
mkdocs-macros-plugin = "^1.3.7"
mkdocs-material = "^9.6.11"
mkdocs-redirects = "^1.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
