[tool.poetry]
name = "start-em-um-projeto-python"
version = "0.1.0"
description = ""
authors = ["XandeCoding <af.santos1998@gmail.com>"]
readme = "README.md"
packages = [{include = "start_em_um_projeto_python"}]

[tool.poetry.dependencies]
python = "^3.11"
tinydb = "^4.8.0"
quart = {extras = ["dotenv"], version = "^0.19.4"}
quart-schema = {extras = ["pydantic"], version = "^0.19.1"}
quart-injector = "^0.0.0b1"
pydantic-settings = "^2.2.1"


[tool.poetry.group.dev.dependencies]
ruff = "^0.0.287"
black = "^23.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.ruff]
select = [
  "E", "W", "F", "C90", "I", "N", "D", "UP", "ASYNC", "S", "B", "DTZ", "TRY"
]
ignore = ["D100"]
fixable = ["ALL"]
unfixable = []

line-length = 95
target-version = "py311"

[tool.ruff.mccabe]
max-complexity = 6

[tool.ruff.pydocstyle]
convention = "pep257"

[tool.black]
line-length = 95
target-version = ["py311"]
workers = 2
preview = true
verbose = false
